// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<back-top> demo: > render [basic] correctly 1`] = `
<div class="sd:relative">
  <ul id="basic-demo" class="sd:h-50 sd:overflow-y-auto">
    <li class="sd:leading-7.5">This is the content</li>
    <li class="sd:leading-7.5">This is the content</li>
    <li class="sd:leading-7.5">This is the content</li>
    <li class="sd:leading-7.5">This is the content</li>
    <li class="sd:leading-7.5">This is the content</li>
    <li class="sd:leading-7.5">This is the content</li>
    <li class="sd:leading-7.5">This is the content</li>
    <li class="sd:leading-7.5">This is the content</li>
    <li class="sd:leading-7.5">This is the content</li>
    <li class="sd:leading-7.5">This is the content</li>
    <li class="sd:leading-7.5">This is the content</li>
    <li class="sd:leading-7.5">This is the content</li>
    <li class="sd:leading-7.5">This is the content</li>
    <li class="sd:leading-7.5">This is the content</li>
    <li class="sd:leading-7.5">This is the content</li>
    <li class="sd:leading-7.5">This is the content</li>
    <li class="sd:leading-7.5">This is the content</li>
    <li class="sd:leading-7.5">This is the content</li>
    <li class="sd:leading-7.5">This is the content</li>
    <li class="sd:leading-7.5">This is the content</li>
    <li class="sd:leading-7.5">This is the content</li>
    <li class="sd:leading-7.5">This is the content</li>
    <li class="sd:leading-7.5">This is the content</li>
    <li class="sd:leading-7.5">This is the content</li>
    <li class="sd:leading-7.5">This is the content</li>
    <li class="sd:leading-7.5">This is the content</li>
    <li class="sd:leading-7.5">This is the content</li>
    <li class="sd:leading-7.5">This is the content</li>
    <li class="sd:leading-7.5">This is the content</li>
    <li class="sd:leading-7.5">This is the content</li>
    <li class="sd:leading-7.5">This is the content</li>
    <li class="sd:leading-7.5">This is the content</li>
    <li class="sd:leading-7.5">This is the content</li>
    <li class="sd:leading-7.5">This is the content</li>
    <li class="sd:leading-7.5">This is the content</li>
    <li class="sd:leading-7.5">This is the content</li>
    <li class="sd:leading-7.5">This is the content</li>
    <li class="sd:leading-7.5">This is the content</li>
    <li class="sd:leading-7.5">This is the content</li>
    <li class="sd:leading-7.5">This is the content</li>
  </ul>
  <transition-stub name="fade-in" appear="false" persisted="false" css="true" class="sd:absolute!">
    <!--v-if-->
  </transition-stub>
</div>
`;

exports[`<back-top> demo: > render [custom] correctly 1`] = `
<div class="sd:relative">
  <ul id="custom-demo" class="sd:h-50 sd:overflow-y-auto">
    <li class="sd:leading-7.5"> This is the content </li>
    <li class="sd:leading-7.5"> This is the content </li>
    <li class="sd:leading-7.5"> This is the content </li>
    <li class="sd:leading-7.5"> This is the content </li>
    <li class="sd:leading-7.5"> This is the content </li>
    <li class="sd:leading-7.5"> This is the content </li>
    <li class="sd:leading-7.5"> This is the content </li>
    <li class="sd:leading-7.5"> This is the content </li>
    <li class="sd:leading-7.5"> This is the content </li>
    <li class="sd:leading-7.5"> This is the content </li>
    <li class="sd:leading-7.5"> This is the content </li>
    <li class="sd:leading-7.5"> This is the content </li>
    <li class="sd:leading-7.5"> This is the content </li>
    <li class="sd:leading-7.5"> This is the content </li>
    <li class="sd:leading-7.5"> This is the content </li>
    <li class="sd:leading-7.5"> This is the content </li>
    <li class="sd:leading-7.5"> This is the content </li>
    <li class="sd:leading-7.5"> This is the content </li>
    <li class="sd:leading-7.5"> This is the content </li>
    <li class="sd:leading-7.5"> This is the content </li>
    <li class="sd:leading-7.5"> This is the content </li>
    <li class="sd:leading-7.5"> This is the content </li>
    <li class="sd:leading-7.5"> This is the content </li>
    <li class="sd:leading-7.5"> This is the content </li>
    <li class="sd:leading-7.5"> This is the content </li>
    <li class="sd:leading-7.5"> This is the content </li>
    <li class="sd:leading-7.5"> This is the content </li>
    <li class="sd:leading-7.5"> This is the content </li>
    <li class="sd:leading-7.5"> This is the content </li>
    <li class="sd:leading-7.5"> This is the content </li>
    <li class="sd:leading-7.5"> This is the content </li>
    <li class="sd:leading-7.5"> This is the content </li>
    <li class="sd:leading-7.5"> This is the content </li>
    <li class="sd:leading-7.5"> This is the content </li>
    <li class="sd:leading-7.5"> This is the content </li>
    <li class="sd:leading-7.5"> This is the content </li>
    <li class="sd:leading-7.5"> This is the content </li>
    <li class="sd:leading-7.5"> This is the content </li>
    <li class="sd:leading-7.5"> This is the content </li>
    <li class="sd:leading-7.5"> This is the content </li>
  </ul>
  <transition-stub name="fade-in" appear="false" persisted="false" css="true" class="sd:absolute!">
    <!--v-if-->
  </transition-stub>
</div>
`;
